@@ -381,7 +381,6 @@ void Application::run()
 	g_debug("Me TV database initialised");
 
 	configuration_manager.initialise();
-	preferred_language = configuration_manager.get_string_value("preferred_language");
 
 	status_icon = new StatusIcon();
 	MainWindow::create(builder);
