@@ -6,6 +6,7 @@
 	* Better information about auto record conflicts
 	* Error messages now appear in status bar
 	* Added tooltips to control buttons
+	* Preferred language feature removed
 
 2010-11-01  Michael Lamothe <michael.lamothe@gmail.com>
 
